# continual-learning-channel-prediction

./: .gitignore  HDRL.md  Paper_overview.md  README.md  experience_replay.md  main.py  prompt.md  pyproject.toml  requirements.txt
Quadriga_Dataset/: configure_angles.m  configure_sf_kf_ds.m  configure_spatial_correlation.m  generate_quadriga_channels_main.m  generation_scenario_1.m
baseline models/: dataloader.py  dataset.ipynb  effecientnet.py  mobilenet.py  sample_training.py  train.py
baseline_models/: ChannelPrediction_DNN.ipynb  README.md  dataloader.py  dataset.ipynb  effecientnet.py  loss.py  main.py  model.py  nmse.py  nmse_run_all.sh  run_all.sh  run_all_CNN.sh  run_all_GRU.sh  run_all_LSTM.sh  run_everything.sh  sample_training.py  test.py  test_cuda_numpy.py  train.py  train_cuda_numpy.py  utils.py
continual_learning/: dataloader.py  er.py  er_nmse_results.csv  er_updated.py  ewc.py  ewc_GRU_loss.csv  ewc_GRU_loss_results.csv  ewc_GRU_nmse_results.csv  ewc_LSTM_loss.csv  ewc_LSTM_loss_results.csv  ewc_LSTM_nmse_results.csv  ewc_TRANS_loss.csv  ewc_TRANS_loss_results.csv  ewc_TRANS_nmse_results.csv  ewc_si_GRU_loss.csv  ewc_si_GRU_nmse_results.csv  ewc_si_LSTM_loss.csv  ewc_si_LSTM_nmse_results.csv  ewc_si_TRANS_loss.csv  ewc_si_TRANS_nmse_results.csv  ewc_updated.py  lars_GRU_loss_results.csv  lars_GRU_nmse_results.csv  lars_LSTM_loss_results.csv  lars_LSTM_nmse_results.csv  lars_TRANS_loss_results.csv  lars_TRANS_nmse_results.csv  loss.py  lwf.py  lwf_GRU_loss.csv  lwf_GRU_nmse_results.csv  lwf_LSTM_loss.csv  lwf_LSTM_nmse_results.csv  lwf_TRANS_loss.csv  (+18 more)
(+179 files in other folders)
