[project]
name = "nas-wireless"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.13.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pip>=25.0.1",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "torch-optim>=0.0.4",
]
